--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,19 @@ services:
     env_file:
       - ./env/mongo.env
     container_name: mongodb
+
+  backend:
+    build: ./backend
+      # context: ./backend
+      # dockerfile: Dockerfile
+    volumes:
+      - ./backend/src:/app/src
+    ports:
+      - 8000:8000
+    env_file:
+      - ./env/backend.env
+    depends_on:
+      - mongodb
+    container_name: backend
 volumes:
   mongodbdata:
